# NLP-chatbot

./: .gitattributes  .gitignore  Fine_Tuning_GPT_2_on_a_Custom_Science_Dataset.ipynb  README.md  app.py  ignite.py  main.py  presentation.txt  pyproject.toml  readme.md  requirements.txt  rules.md  start.sh
data/: testing.json  training.json  validating.json
datastore/: state.json
models/cached/: gpt2_cached_lm_512
models/cached/models--microsoft--DialoGPT-small/refs/: main
models/cached/models--microsoft--DialoGPT-small/snapshots/14b007303ce9dff0bd192dc4b9ff0f86b4e13069/: config.json  generation_config.json  model.safetensors
models/finetuned-science/: config.json  eval_results.txt  model.safetensors
models/runs/Feb09_14-15-28_0e82be971fb2/: events.out.tfevents.1707488128.0e82be971fb2.1155.0
notebook/: finetuning_dialoGPT.ipynb
notebooks/: finetuning_dialoGPT.ipynb
results/: gpt2-results-conversation.txt  gpt2-results.txt
